--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <title>CI CD Demo</title>
 </head>
 <body>
-    <h1>Hello CI/CD 🚀</h1>
-    <p>This is Deployment Kanna 2</p>
+    <h1>Hello CI/CD</h1>
+    <p>GitHub Actions</p>
 </body>
 </html>
