--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello CI/CD</h1>
-    <p>Welcome to GitHubg actions</p>
+    <p>Welcome to GitHub actions</p>
 </body>
 </html>
